2022-03-04  Youenn Fablet  <youenn@apple.com>

        Introduce routines to exchange SharedVideoFrame::Buffer directly
        https://bugs.webkit.org/show_bug.cgi?id=237267

        Reviewed by Eric Carlson.

        Define explictly SharedVideoFrame::Buffer as Variant of the various buffer representations.
        This allows to move more code in SharedVideoFrame for instance by adding direct support of sending webrtc::VideoFrame buffers in SharedVideoFrame.
        Reuse that code in LibWebRTCCodecs as a refactoring/simplification.
        Reuse that code in RemoteVideoFrameObjectHeap which allows to exchange IOSurfaces in case WebProcess can use them.
        This is used when encoding such frames using software encoders.

        Covered by existing tests.

        * GPUProcess/media/RemoteVideoFrameObjectHeap.cpp:
        * GPUProcess/media/RemoteVideoFrameObjectHeap.h:
        * GPUProcess/media/RemoteVideoFrameObjectHeap.messages.in:
        * GPUProcess/webrtc/LibWebRTCCodecsProxy.h:
        * GPUProcess/webrtc/LibWebRTCCodecsProxy.messages.in:
        * GPUProcess/webrtc/LibWebRTCCodecsProxy.mm:
        * WebKit.xcodeproj/project.pbxproj:
        * WebProcess/GPU/media/RemoteVideoFrameProxy.cpp:
        * WebProcess/GPU/webrtc/LibWebRTCCodecs.cpp:
        * WebProcess/GPU/webrtc/RemoteVideoFrameObjectHeapProxy.h:
        * WebProcess/GPU/webrtc/RemoteVideoFrameObjectHeapProxyProcessor.cpp:
        * WebProcess/GPU/webrtc/RemoteVideoFrameObjectHeapProxyProcessor.h:
        * WebProcess/GPU/webrtc/RemoteVideoFrameObjectHeapProxyProcessor.messages.in:
        * WebProcess/GPU/webrtc/SharedVideoFrame.cpp:
        * WebProcess/GPU/webrtc/SharedVideoFrame.h:

2022-03-03  Brady Eidson  <beidson@apple.com>

        Add a new "Daemon -> Client" message type to webpushd
        https://bugs.webkit.org/show_bug.cgi?id=237391

        Reviewed by Alex Christensen.

        Future work will need more messages like this.