@@ -1,3 +1,12 @@
+2022-03-04  Adrian Perez de Castro  <aperez@igalia.com>
+
+        [GTK][WPE] Documentation for webkit_web_context_set_spell_checking_languages() is incomplete
+        https://bugs.webkit.org/show_bug.cgi?id=237465
+
+        Reviewed by Carlos Garcia Campos.
+
+        * UIProcess/API/glib/WebKitWebContext.cpp: Improve documentation.
+
 2022-03-04  Youenn Fablet  <youenn@apple.com>
 
         Introduce routines to exchange SharedVideoFrame::Buffer directly
